Fix word-wrap on email address.

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -142,3 +142,7 @@ a, a:hover, a:visited {
     bottom: 10px;
     margin: 0 10px;
 }
+
+.word-wrap {
+    word-wrap: break-word;
+}
